--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ def supportVersion = '28.0.0'
 def retrofitVersion = '2.9.0'
 def glideVersion = '4.11.0'
 def rxJavaVersion = '2.2.10'
-def roomVersion = '2.5.0-alpha03'
+def roomVersion = '2.4.3'
 def navVersion = '2.6.0-alpha01'
 def preferencesVersion = '1.2.0'
 dependencies {
