--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,12 +62,16 @@ dependencies {
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     kapt "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
+
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
+
 
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     implementation "androidx.navigation:navigation-dynamic-features-fragment:2.5.2"
-
+//coroutins
+   // implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    //implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     // ViewModel
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha02")
     implementation "android.arch.lifecycle:extensions:1.1.1"
